@@ -1,6 +1,7 @@
 libmongocrypt (1.7.1-3) UNRELEASED; urgency=medium
 
   * Drop remove-builtin.patch, integrated upstream
+  * Disable Decimal128 on platforms without IntelDFP
 
  -- Kyle Kloberdanz <kyle.kloberdanz@mongodb.com>  Fri, 10 Feb 2023 09:33:24 -0600
 
